--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,31 +1,36 @@
 <resources>
     <string name="app_name">AppManager</string>
-    <string name="title_activity_apk_list">List of installed applications</string>
-    <string name="appicon">Application Icon</string>
-    <string name="apkname">Application Name:</string>
-    <string name="package_name">Package Name:</string>
-    <string name="version">Version:</string>
-    <string name="features">Required Features:</string>
-    <string name="permissions">Required Permissions:</string>
-    <string name="req_version">Target SDK Version:</string>
-    <string name="path_info">Path Info:</string>
-    <string name="appsize">Physical Size</string>
-    <string name="installed">Installed:</string>
-    <string name="modified">Last Modified:</string>
-    <string name="uninstall_app">Uninstall</string>
-    <string name="backup">Backup</string>
-    <string name="app_details">Application Detail</string>
-    <string name="available_space">Available Space :</string>
-    <string name="total_space">Total Space :</string>
+    <string name="app_codename" translatable="false">AM</string>
+    <string name="app_description">A simple application manager and backup tool for Android</string>
+
+    <!-- Labels -->
+    <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
+    <string name="action_share">Share</string>
+    <string name="action_apps">Installed Apps</string>
+    <string name="action_system_apps">System Apps</string>
+    <string name="action_favorites">Favorites</string>
+    <string name="action_hidden_apps">Hidden Apps</string>
+    <string name="action_hide">Hide</string>
+    <string name="action_unhide">Unhide</string>
+    <string name="action_ram">RAM Info</string>
+    <string name="action_ram_description">Clean memory</string>
+    <string name="action_device">Device Info</string>
+    <string name="action_processes_info">Processes Info</string>
+    <string name="send_to">Send \"%s\" using</string>
+    <string name="deleting">Deleting&#8230;</string>
+    <string name="loading">Loading&#8230;</string>
+    <string name="deleting_done">Files deleted!</string>
+    <string name="deleting_error">Something went wrong removing the files</string>
+    <string name="search">Search</string>
+    <string name="search_hint">Search by name&#8230;</string>
+    <string name="search_noresults">No results were found for your search</string>
+    <string name="copied_clipboard">Copied to clipboard</string>
     <string name="total_ram">Total RAM :</string>
     <string name="available_ram">Available RAM :</string>
-    <string name="clean_ram">Clear Memory</string>
 
+    <!-- Messages -->
 
-    <string name="about_title">Rudraksh Pahade</string>
-    <string name="about_desc">I am an Android Developer just build this application to demonstrate how we can extract all installed applications of device, both user and system applications. This demo also provides the feature of (un)installing the application.</string>
-    <string name="action_ram">About RAM</string>
-    <string name="action_device_info">Device Info</string>
     <string name="ram_clear_message">
         Clear inactive and background processes.\n\nCompleted and ongoing application\nfunctions will be removed from RAM.\n\nClearing RAM will end some applications.Save data before you clear RAM.\n\nTo enable quick reopening, Android OS
         applications remain in the memory, even
@@ -36,4 +41,88 @@
         If you clear the memory manually,
         applications may take longer to launch.
     </string>
+
+
+
+    <!-- Transitions -->
+    <string name="transition_app_icon" translatable="false">App Icon Transition</string>
+
+    <!-- Dialogs -->
+    <string name="dialog_saved">\"%s\" APK saved</string>
+    <string name="dialog_saved_description">\"%1$s\" APK has been saved into \"AppManager\" folder with name: %2$s</string>
+    <string name="dialog_saving">Saving %s APK&#8230;</string>
+    <string name="dialog_saving_description">AppManager is saving the APK into \"AppManager\" folder.</string>
+    <string name="dialog_about">About %s</string>
+    <string name="dialog_about_description">Developed by Rudraksh Pahade.</string>
+    <string name="dialog_run">Open</string>
+    <string name="dialog_run_description">Run this app now</string>
+    <string name="dialog_extract">Extract</string>
+    <string name="dialog_extract_description">Extract this app under \"AppManager\" directory</string>
+    <string name="dialog_extract_fail">Extract failed</string>
+    <string name="dialog_extract_fail_description">Unable to extract this APK. Please, try to restart your device.</string>
+    <string name="dialog_uninstall">Uninstall</string>
+    <string name="dialog_uninstall_description">Uninstall this app right now</string>
+    <string name="dialog_uninstalling">Uninstalling %s APK&#8230;</string>
+    <string name="dialog_uninstalling_description">AppManager is uninstalling this app. Please wait.</string>
+    <string name="dialog_cache">Remove cache</string>
+    <string name="dialog_cache_description">Remove the cache for this app</string>
+    <string name="dialog_cache_success">Cache deleted</string>
+    <string name="dialog_cache_success_description">Cache for %s has been removed</string>
+    <string name="dialog_cache_deleting">Deleting cache files&#8230;</string>
+    <string name="dialog_cache_deleting_description">Please wait while cache files are being deleted.</string>
+    <string name="dialog_clear_data">Clear data</string>
+    <string name="dialog_clear_data_description">Remove all application data for this app</string>
+    <string name="dialog_clear_data_deleting">Deleting all files&#8230;</string>
+    <string name="dialog_clear_data_deleting_description">Please wait while all files are being deleted.</string>
+    <string name="dialog_clear_data_success">Data deleted</string>
+    <string name="dialog_clear_data_success_description">All data for %s has been removed</string>
+    <string name="dialog_root_required">Root required</string>
+    <string name="dialog_root_required_description">Your device must be rooted with root permission given. If you have denied access once: Go to SuperUser app to give access to ML Manager.</string>
+    <string name="dialog_reboot">Reboot is necessary to display the changes. Do you want to reboot now?</string>
+    <string name="dialog_cannot_open">%s can\'t be opened because it\'s hidden. Try to unhide before opening this app.</string>
+    <string name="dialog_uninstall_root">Are you sure you want to uninstall?</string>
+    <string name="dialog_uninstall_root_description">You are one step away of removing a system app. Do not delete it if you are unsure, it could cause malfunction of the device.</string>
+    <string name="dialog_uninstalled_root">%s uninstalled</string>
+    <string name="dialog_uninstalled_root_description">Some changes will not be applied until you restart your device. Do you want to restart now?</string>
+    <string name="dialog_permissions">Permissions are required</string>
+    <string name="dialog_permissions_description">You must accept the permissions to extract and share APKs, clean cache and data.</string>
+
+    <!-- Settings -->
+    <string name="settings_delete_all">Delete all extracted APKs</string>
+    <string name="settings_delete_all_description">Remove all the extracted APKs stored in the extraction folder</string>
+    <string name="settings_custom_path">Custom folder for extracted APKs</string>
+    <string name="settings_custom_filename">Default filename for extracted APKs</string>
+    <string name="settings_sort_mode">Sort apps by</string>
+    <string name="settings_customizations">Customizations</string>
+    <string name="settings_primary_color">Primary color</string>
+    <string name="settings_primary_color_description">Set the primary color for the toolbar and navigation bar. Requires Android 5.0+</string>
+    <string name="settings_fab_color">Floating button color</string>
+    <string name="settings_fab_color_description">Set the color for the Floating Action Button (FAB)</string>
+    <string name="settings_navigation_black">Show navigation bar in black</string>
+    <string name="settings_navigation_black_description">Don\'t use a custom color for the navigation bar.</string>
+    <string name="settings_default_customization">Restore customizations</string>
+    <string name="settings_default_customization_description">Restore colors to the default values</string>
+    <string name="settings_googleplay">Rate on Google Play</string>
+    <string name="settings_googleplay_description">Do you have a few seconds to rate this app? We want to hear your opinion</string>
+    <string name="settings_googleplus">Join me on Google+</string>
+    <string name="settings_googleplus_description">Want to talk about APKs and keep abreast of developments in the application? Join to our community!</string>
+    <string name="settings_license">Open Source licenses</string>
+    <string name="settings_about">Make in India</string>
+
+    <!-- Buttons -->
+    <string name="button_extract">Extract</string>
+    <string name="button_share">Share APK</string>
+    <string name="button_undo">Undo</string>
+    <string name="button_reboot">Reboot</string>
+    <string name="button_later">Later</string>
+    <string name="button_uninstall">Uninstall</string>
+    <string name="button_default">Default</string>
+    <string name="clean_ram">Clear Memory</string>
+
+    <!-- About -->
+    <string name="about_description_1">App Developer</string>
+    <string name="about_description_2">Icon Designer</string>
+
+    <!-- Toasts -->
+    <string name="tap_exit">Press again to exit the app</string>
 </resources>
