--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="action_ram">RAM Info</string>
     <string name="action_ram_description">Clean memory</string>
     <string name="action_device">Device Info</string>
+    <string name="action_storage">Storage</string>
     <string name="action_processes_info">Processes Info</string>
     <string name="send_to">Send \"%s\" using</string>
     <string name="deleting">Deleting&#8230;</string>
@@ -28,6 +29,8 @@
     <string name="copied_clipboard">Copied to clipboard</string>
     <string name="total_ram">Total RAM :</string>
     <string name="available_ram">Free RAM :</string>
+    <string name="ram_status">RAM Status</string>
+    <string name="ram_calculation">3.84Gb / 10.46GB</string>
 
     <!-- Messages -->
 
@@ -124,5 +127,5 @@
     <string name="about_description_2">Icon Designer</string>
 
     <!-- Toasts -->
-    <string name="tap_exit">Press again to exit the app</string>
+    <string name="tap_exit">Press back again to exit the app</string>
 </resources>
