--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,14 @@
     <string name="scanning">Scanning ...</string>
     <string name="scanning_m_of_n">Scanning... %1$d/%2$d</string>
     <string name="software_top_text">Installed - %1$s already installed software models , occupies storage space - %2$s</string>
+    <string name="storage_internal">Internal</string>
+    <string name="storage_document">Document</string>
+    <string name="storage_external">External</string>
+    <string name="storage_file_size">size</string>
+    <string name="storage_files">Files</string>
+    <string name="storage_files_short">files</string>
+    <string name="storage_full">Full statistics</string>
+    <string name="storage_image">Image</string>
 
 
     <!-- Messages -->
