--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="app_description">A simple application manager and backup tool for Android</string>
 
     <!-- Labels -->
+    <string name="action_sms_backup">Backup SMS</string>
+    <string name="action_sms_recover">Restore SMS</string>
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
     <string name="action_share">Share</string>
