--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,6 +128,8 @@
     <string name="settings_googleplay">Rate on Google Play</string>
     <string name="settings_googleplay_description">Do you have a few seconds to rate this app? We want to hear your opinion</string>
     <string name="settings_googleplus">Join me on Google+</string>
+    <string name="settings_facebook">Join me on Facebook</string>
+    <string name="settings_twitter">Follow me on Twitter</string>
     <string name="settings_googleplus_description">Want to talk about APKs and keep abreast of developments in the application? Join to our community!</string>
     <string name="settings_license">Open Source licenses</string>
     <string name="settings_about">Made in India</string>
