Commit for version 1.3 -> Added SMS backup utility. -> Added ActivityContacts and xml. -> Removed SMS Restoration functionality. -> Modified color combination of each activities.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="action_device">Device Info</string>
     <string name="action_storage">Storage</string>
     <string name="action_sms">SMS</string>
+    <string name="action_contacts">Contacts</string>
     <string name="action_processes_info">Processes Info</string>
     <string name="send_to">Send \"%s\" using</string>
     <string name="deleting">Deleting&#8230;</string>
