--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <!-- Labels -->
     <string name="action_sms_backup">Backup SMS</string>
     <string name="action_sms_recover">Restore SMS</string>
+    <string name="action_contacts_backup">Backup Contacts</string>
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
     <string name="action_share">Share</string>
