Pre-final Commit for Version 1.5 -> Added No Internet Connection functionality -> Modified AppRater UI. -> Added support for Android 6.0 Permissions -> Modified UitilsApp, added permissions to check for SMS and Contacts. --> Removed UpdateChecker Library. --> Modified build.gradle to 1.5

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,8 @@
     <string name="storage_files_short">files</string>
     <string name="storage_full">Full statistics</string>
     <string name="storage_image">Image</string>
+    <string name="no_internet_heading">You\&apos;re offline</string>
+    <string name="no_internet_message">You need a WIFI or data connection  in order to proceed to view a content on web page.</string>
 
 
     <!-- Messages -->
