--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,6 +118,8 @@
     <string name="settings_delete_all">Delete all extracted APKs</string>
     <string name="settings_delete_all_description">Remove all the extracted APKs stored in the extraction folder</string>
     <string name="settings_custom_path">Custom folder for extracted APKs</string>
+    <string name="settings_custom_sms_path">Default folder for extracted SMSs</string>
+    <string name="settings_custom_contacts_path">Default folder for extracted CONTACTSs</string>
     <string name="settings_custom_filename">Default filename for extracted APKs</string>
     <string name="settings_sort_mode">Sort apps by</string>
     <string name="settings_customizations">Customizations</string>
